Fixing the margins on mobile banner

--- a/assets/component-floating-labels.css
+++ b/assets/component-floating-labels.css
@@ -26,8 +26,8 @@
 .product-label--badge {
     right: 14px;
     position: absolute;
-    width: 110px;
-    height: 110px;
+    width: 74px;
+    height: 74px;
     border-radius: 50%;
     border: 0;
     background-color: var(--sale-badge-bg);
@@ -39,7 +39,7 @@
     align-items: center;
     justify-content: center;
     z-index: 5;
-    font-size: 21px;
+    font-size: 14px;
 }
 .product-label--badge-collection-page {
     right: 11.01px;
